--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,7 +6,7 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #ff7e46;
+  --ifm-color-primary: #f587d6;
   --ifm-color-primary-dark: #7a2b6b;
   --ifm-color-primary-darker: #4e1761;
   --ifm-color-primary-darkest: #2f0b55;
@@ -19,7 +19,7 @@
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #ff7e46;
+  --ifm-color-primary: #f587d6;
   --ifm-color-primary-dark: #7a2b6b;
   --ifm-color-primary-darker: #4e1761;
   --ifm-color-primary-darkest: #2f0b55;
